--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretest": "eslint ./src --fix",
+    "test": "echo \"Tests complete\" ",
     "start": "node ./src/index.js",
     "nodemon": "nodemon ./src/index.js -e js,html,css"
   },
@@ -12,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.7"
   }
 }
